// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Alert Dismissing 1`] = `
<div>
  <div
    className="Component-alert-0-1-72"
  >
    A simple primary alert with a example 
    <a
      className="Component-alertLink-0-1-71"
      href="#"
    >
      link
    </a>
    <button
      className="Component-close-0-1-70"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alert-0-1-80"
  >
    A simple primary alert with a example 
    <a
      className="Component-alertLink-0-1-79"
      href="#"
    >
      link
    </a>
    <button
      className="Component-close-0-1-78"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alert-0-1-88"
  >
    A simple primary alert with a example 
    <a
      className="Component-alertLink-0-1-87"
      href="#"
    >
      link
    </a>
    <button
      className="Component-close-0-1-86"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alert-0-1-96"
  >
    A simple primary alert with a example 
    <a
      className="Component-alertLink-0-1-95"
      href="#"
    >
      link
    </a>
    <button
      className="Component-close-0-1-94"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alert-0-1-104"
  >
    A simple primary alert with a example 
    <a
      className="Component-alertLink-0-1-103"
      href="#"
    >
      link
    </a>
    <button
      className="Component-close-0-1-102"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alert-0-1-112"
  >
    A simple primary alert with a example 
    <a
      className="Component-alertLink-0-1-111"
      href="#"
    >
      link
    </a>
    <button
      className="Component-close-0-1-110"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alert-0-1-120"
  >
    A simple primary alert with a example 
    <a
      className="Component-alertLink-0-1-119"
      href="#"
    >
      link
    </a>
    <button
      className="Component-close-0-1-118"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alert-0-1-128"
  >
    A simple primary alert with a example 
    <a
      className="Component-alertLink-0-1-127"
      href="#"
    >
      link
    </a>
    <button
      className="Component-close-0-1-126"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Alert Theme colors 1`] = `
<div>
  <div
    className="Component-alert-0-1-8"
  >
    alertPrimary
  </div>
  <div
    className="Component-alert-0-1-16"
  >
    alertSecondary
  </div>
  <div
    className="Component-alert-0-1-24"
  >
    alertSuccess
  </div>
  <div
    className="Component-alert-0-1-32"
  >
    alertInfo
  </div>
  <div
    className="Component-alert-0-1-40"
  >
    alertWarning
  </div>
  <div
    className="Component-alert-0-1-48"
  >
    alertDanger
  </div>
  <div
    className="Component-alert-0-1-56"
  >
    alertLight
  </div>
  <div
    className="Component-alert-0-1-64"
  >
    alertDark
  </div>
</div>
`;

exports[`Storyshots Badge Badge in button 1`] = `
<div>
  <button
    className="Component-container-0-1-142"
    type="button"
  >
    Notifications 
    <span
      className="Component-badge-0-1-143"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-1-149"
    type="button"
  >
    Notifications 
    <span
      className="Component-badge-0-1-150"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-1-156"
    type="button"
  >
    Notifications 
    <span
      className="Component-badge-0-1-157"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-1-163"
    type="button"
  >
    Notifications 
    <span
      className="Component-badge-0-1-164"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-1-170"
    type="button"
  >
    Notifications 
    <span
      className="Component-badge-0-1-171"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-1-177"
    type="button"
  >
    Notifications 
    <span
      className="Component-badge-0-1-178"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-1-184"
    type="button"
  >
    Notifications 
    <span
      className="Component-badge-0-1-185"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-1-191"
    type="button"
  >
    Notifications 
    <span
      className="Component-badge-0-1-192"
    >
      4
    </span>
  </button>
</div>
`;

exports[`Storyshots Badge Badge in header 1`] = `
<div>
  <div>
    <div>
      <h1>
        Example heading 
        <span
          className="Component-badge-0-1-129"
        >
          123
        </span>
      </h1>
      <h2>
        Example heading 
        <span
          className="Component-badge-0-1-129"
        >
          123
        </span>
      </h2>
      <h3>
        Example heading 
        <span
          className="Component-badge-0-1-129"
        >
          123
        </span>
      </h3>
      <h4>
        Example heading 
        <span
          className="Component-badge-0-1-129"
        >
          123
        </span>
      </h4>
      <h5>
        Example heading 
        <span
          className="Component-badge-0-1-129"
        >
          123
        </span>
      </h5>
      <h6>
        Example heading 
        <span
          className="Component-badge-0-1-129"
        >
          123
        </span>
      </h6>
    </div>
  </div>
  <div>
    <div>
      <h1>
        Example heading 
        <span
          className="Component-badge-0-1-130"
        >
          123
        </span>
      </h1>
      <h2>
        Example heading 
        <span
          className="Component-badge-0-1-130"
        >
          123
        </span>
      </h2>
      <h3>
        Example heading 
        <span
          className="Component-badge-0-1-130"
        >
          123
        </span>
      </h3>
      <h4>
        Example heading 
        <span
          className="Component-badge-0-1-130"
        >
          123
        </span>
      </h4>
      <h5>
        Example heading 
        <span
          className="Component-badge-0-1-130"
        >
          123
        </span>
      </h5>
      <h6>
        Example heading 
        <span
          className="Component-badge-0-1-130"
        >
          123
        </span>
      </h6>
    </div>
  </div>
  <div>
    <div>
      <h1>
        Example heading 
        <span
          className="Component-badge-0-1-131"
        >
          123
        </span>
      </h1>
      <h2>
        Example heading 
        <span
          className="Component-badge-0-1-131"
        >
          123
        </span>
      </h2>
      <h3>
        Example heading 
        <span
          className="Component-badge-0-1-131"
        >
          123
        </span>
      </h3>
      <h4>
        Example heading 
        <span
          className="Component-badge-0-1-131"
        >
          123
        </span>
      </h4>
      <h5>
        Example heading 
        <span
          className="Component-badge-0-1-131"
        >
          123
        </span>
      </h5>
      <h6>
        Example heading 
        <span
          className="Component-badge-0-1-131"
        >
          123
        </span>
      </h6>
    </div>
  </div>
  <div>
    <div>
      <h1>
        Example heading 
        <span
          className="Component-badge-0-1-132"
        >
          123
        </span>
      </h1>
      <h2>
        Example heading 
        <span
          className="Component-badge-0-1-132"
        >
          123
        </span>
      </h2>
      <h3>
        Example heading 
        <span
          className="Component-badge-0-1-132"
        >
          123
        </span>
      </h3>
      <h4>
        Example heading 
        <span
          className="Component-badge-0-1-132"
        >
          123
        </span>
      </h4>
      <h5>
        Example heading 
        <span
          className="Component-badge-0-1-132"
        >
          123
        </span>
      </h5>
      <h6>
        Example heading 
        <span
          className="Component-badge-0-1-132"
        >
          123
        </span>
      </h6>
    </div>
  </div>
  <div>
    <div>
      <h1>
        Example heading 
        <span
          className="Component-badge-0-1-133"
        >
          123
        </span>
      </h1>
      <h2>
        Example heading 
        <span
          className="Component-badge-0-1-133"
        >
          123
        </span>
      </h2>
      <h3>
        Example heading 
        <span
          className="Component-badge-0-1-133"
        >
          123
        </span>
      </h3>
      <h4>
        Example heading 
        <span
          className="Component-badge-0-1-133"
        >
          123
        </span>
      </h4>
      <h5>
        Example heading 
        <span
          className="Component-badge-0-1-133"
        >
          123
        </span>
      </h5>
      <h6>
        Example heading 
        <span
          className="Component-badge-0-1-133"
        >
          123
        </span>
      </h6>
    </div>
  </div>
  <div>
    <div>
      <h1>
        Example heading 
        <span
          className="Component-badge-0-1-134"
        >
          123
        </span>
      </h1>
      <h2>
        Example heading 
        <span
          className="Component-badge-0-1-134"
        >
          123
        </span>
      </h2>
      <h3>
        Example heading 
        <span
          className="Component-badge-0-1-134"
        >
          123
        </span>
      </h3>
      <h4>
        Example heading 
        <span
          className="Component-badge-0-1-134"
        >
          123
        </span>
      </h4>
      <h5>
        Example heading 
        <span
          className="Component-badge-0-1-134"
        >
          123
        </span>
      </h5>
      <h6>
        Example heading 
        <span
          className="Component-badge-0-1-134"
        >
          123
        </span>
      </h6>
    </div>
  </div>
  <div>
    <div>
      <h1>
        Example heading 
        <span
          className="Component-badge-0-1-135"
        >
          123
        </span>
      </h1>
      <h2>
        Example heading 
        <span
          className="Component-badge-0-1-135"
        >
          123
        </span>
      </h2>
      <h3>
        Example heading 
        <span
          className="Component-badge-0-1-135"
        >
          123
        </span>
      </h3>
      <h4>
        Example heading 
        <span
          className="Component-badge-0-1-135"
        >
          123
        </span>
      </h4>
      <h5>
        Example heading 
        <span
          className="Component-badge-0-1-135"
        >
          123
        </span>
      </h5>
      <h6>
        Example heading 
        <span
          className="Component-badge-0-1-135"
        >
          123
        </span>
      </h6>
    </div>
  </div>
  <div>
    <div>
      <h1>
        Example heading 
        <span
          className="Component-badge-0-1-136"
        >
          123
        </span>
      </h1>
      <h2>
        Example heading 
        <span
          className="Component-badge-0-1-136"
        >
          123
        </span>
      </h2>
      <h3>
        Example heading 
        <span
          className="Component-badge-0-1-136"
        >
          123
        </span>
      </h3>
      <h4>
        Example heading 
        <span
          className="Component-badge-0-1-136"
        >
          123
        </span>
      </h4>
      <h5>
        Example heading 
        <span
          className="Component-badge-0-1-136"
        >
          123
        </span>
      </h5>
      <h6>
        Example heading 
        <span
          className="Component-badge-0-1-136"
        >
          123
        </span>
      </h6>
    </div>
  </div>
</div>
`;

exports[`Storyshots Badge Link badges 1`] = `
<div>
  <a
    className="Component-btnInsideLink-0-1-209"
    href="#"
  >
    badgePrimary
  </a>
  <a
    className="Component-btnInsideLink-0-1-210"
    href="#"
  >
    badgeSecondary
  </a>
  <a
    className="Component-btnInsideLink-0-1-211"
    href="#"
  >
    badgeSuccess
  </a>
  <a
    className="Component-btnInsideLink-0-1-212"
    href="#"
  >
    badgeInfo
  </a>
  <a
    className="Component-btnInsideLink-0-1-213"
    href="#"
  >
    badgeWarning
  </a>
  <a
    className="Component-btnInsideLink-0-1-214"
    href="#"
  >
    badgeDanger
  </a>
  <a
    className="Component-btnInsideLink-0-1-215"
    href="#"
  >
    badgeLight
  </a>
  <a
    className="Component-btnInsideLink-0-1-216"
    href="#"
  >
    badgeDark
  </a>
</div>
`;

exports[`Storyshots Badge Pill badges 1`] = `
<div>
  <span
    className="Component-badgePill-0-1-201"
  >
    badgePrimary
  </span>
  <span
    className="Component-badgePill-0-1-202"
  >
    badgeSecondary
  </span>
  <span
    className="Component-badgePill-0-1-203"
  >
    badgeSuccess
  </span>
  <span
    className="Component-badgePill-0-1-204"
  >
    badgeInfo
  </span>
  <span
    className="Component-badgePill-0-1-205"
  >
    badgeWarning
  </span>
  <span
    className="Component-badgePill-0-1-206"
  >
    badgeDanger
  </span>
  <span
    className="Component-badgePill-0-1-207"
  >
    badgeLight
  </span>
  <span
    className="Component-badgePill-0-1-208"
  >
    badgeDark
  </span>
</div>
`;

exports[`Storyshots Badge Span badges 1`] = `
<div>
  <span
    className="Component-badge-0-1-193"
  >
    badgePrimary
  </span>
  <span
    className="Component-badge-0-1-194"
  >
    badgeSecondary
  </span>
  <span
    className="Component-badge-0-1-195"
  >
    badgeSuccess
  </span>
  <span
    className="Component-badge-0-1-196"
  >
    badgeInfo
  </span>
  <span
    className="Component-badge-0-1-197"
  >
    badgeWarning
  </span>
  <span
    className="Component-badge-0-1-198"
  >
    badgeDanger
  </span>
  <span
    className="Component-badge-0-1-199"
  >
    badgeLight
  </span>
  <span
    className="Component-badge-0-1-200"
  >
    badgeDark
  </span>
</div>
`;

exports[`Storyshots Breadcrumb breadcrumb 1`] = `
<div>
  <nav>
    <ol
      className="Component-breadcrumb-0-1-218"
    >
      <li
        className="Component-breadcrumbItem-0-1-219"
      >
        Home
      </li>
    </ol>
  </nav>
  <nav>
    <ol
      className="Component-breadcrumb-0-1-218"
    >
      <li
        className="Component-breadcrumbItem-0-1-219"
      >
        <a
          href="#"
        >
          Home
        </a>
      </li>
      <li
        className="Component-breadcrumbItem-0-1-219"
      >
        Library
      </li>
    </ol>
  </nav>
  <nav>
    <ol
      className="Component-breadcrumb-0-1-218"
    >
      <li
        className="Component-breadcrumbItem-0-1-219"
      >
        <a
          href="#"
        >
          Home
        </a>
      </li>
      <li
        className="Component-breadcrumbItem-0-1-219"
      >
        <a
          href="#"
        >
          Library
        </a>
      </li>
      <li
        className="Component-breadcrumbItem-0-1-219"
      >
        Data
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Storyshots Button groups 1`] = `
<div>
  <div
    className="Component-btnContainer-0-1-231 Component-reboot-0-1-225 Component-btnGroup-0-1-221 Component-btnGroupToggle-0-1-222"
  >
    <label
      className="Component-btnActivethemeColor-0-1-232 Component-btn-0-1-220 Component-themeColor-0-1-226 Component-active-0-1-227"
    >
      <input
        id="option1"
        name="options"
        type="radio"
      />
       checked
    </label>
    <label
      className="Component-btnThemeColor-0-1-233 Component-btn-0-1-220 Component-themeColor-0-1-226"
    >
      <input
        id="option2"
        name="options"
        type="radio"
      />
       Radio
    </label>
    <label
      className="Component-btnThemeColor-0-1-233 Component-btn-0-1-220 Component-themeColor-0-1-226"
    >
      <input
        id="option3"
        name="options"
        type="radio"
      />
       Radio
    </label>
  </div>
  <div
    className="Component-btnContainer-0-1-245 Component-reboot-0-1-239 Component-btnGroup-0-1-235 Component-btnGroupToggle-0-1-236"
  >
    <label
      className="Component-btnActivethemeColor-0-1-246 Component-btn-0-1-234 Component-themeColor-0-1-240 Component-active-0-1-241"
    >
      <input
        id="option1"
        name="options"
        type="radio"
      />
       checked
    </label>
    <label
      className="Component-btnThemeColor-0-1-247 Component-btn-0-1-234 Component-themeColor-0-1-240"
    >
      <input
        id="option2"
        name="options"
        type="radio"
      />
       Radio
    </label>
    <label
      className="Component-btnThemeColor-0-1-247 Component-btn-0-1-234 Component-themeColor-0-1-240"
    >
      <input
        id="option3"
        name="options"
        type="radio"
      />
       Radio
    </label>
  </div>
  <div
    className="Component-btnContainer-0-1-259 Component-reboot-0-1-253 Component-btnGroup-0-1-249 Component-btnGroupToggle-0-1-250"
  >
    <label
      className="Component-btnActivethemeColor-0-1-260 Component-btn-0-1-248 Component-themeColor-0-1-254 Component-active-0-1-255"
    >
      <input
        id="option1"
        name="options"
        type="radio"
      />
       checked
    </label>
    <label
      className="Component-btnThemeColor-0-1-261 Component-btn-0-1-248 Component-themeColor-0-1-254"
    >
      <input
        id="option2"
        name="options"
        type="radio"
      />
       Radio
    </label>
    <label
      className="Component-btnThemeColor-0-1-261 Component-btn-0-1-248 Component-themeColor-0-1-254"
    >
      <input
        id="option3"
        name="options"
        type="radio"
      />
       Radio
    </label>
  </div>
  <div
    className="Component-btnContainer-0-1-273 Component-reboot-0-1-267 Component-btnGroup-0-1-263 Component-btnGroupToggle-0-1-264"
  >
    <label
      className="Component-btnActivethemeColor-0-1-274 Component-btn-0-1-262 Component-themeColor-0-1-268 Component-active-0-1-269"
    >
      <input
        id="option1"
        name="options"
        type="radio"
      />
       checked
    </label>
    <label
      className="Component-btnThemeColor-0-1-275 Component-btn-0-1-262 Component-themeColor-0-1-268"
    >
      <input
        id="option2"
        name="options"
        type="radio"
      />
       Radio
    </label>
    <label
      className="Component-btnThemeColor-0-1-275 Component-btn-0-1-262 Component-themeColor-0-1-268"
    >
      <input
        id="option3"
        name="options"
        type="radio"
      />
       Radio
    </label>
  </div>
  <div
    className="Component-btnContainer-0-1-287 Component-reboot-0-1-281 Component-btnGroup-0-1-277 Component-btnGroupToggle-0-1-278"
  >
    <label
      className="Component-btnActivethemeColor-0-1-288 Component-btn-0-1-276 Component-themeColor-0-1-282 Component-active-0-1-283"
    >
      <input
        id="option1"
        name="options"
        type="radio"
      />
       checked
    </label>
    <label
      className="Component-btnThemeColor-0-1-289 Component-btn-0-1-276 Component-themeColor-0-1-282"
    >
      <input
        id="option2"
        name="options"
        type="radio"
      />
       Radio
    </label>
    <label
      className="Component-btnThemeColor-0-1-289 Component-btn-0-1-276 Component-themeColor-0-1-282"
    >
      <input
        id="option3"
        name="options"
        type="radio"
      />
       Radio
    </label>
  </div>
  <div
    className="Component-btnContainer-0-1-301 Component-reboot-0-1-295 Component-btnGroup-0-1-291 Component-btnGroupToggle-0-1-292"
  >
    <label
      className="Component-btnActivethemeColor-0-1-302 Component-btn-0-1-290 Component-themeColor-0-1-296 Component-active-0-1-297"
    >
      <input
        id="option1"
        name="options"
        type="radio"
      />
       checked
    </label>
    <label
      className="Component-btnThemeColor-0-1-303 Component-btn-0-1-290 Component-themeColor-0-1-296"
    >
      <input
        id="option2"
        name="options"
        type="radio"
      />
       Radio
    </label>
    <label
      className="Component-btnThemeColor-0-1-303 Component-btn-0-1-290 Component-themeColor-0-1-296"
    >
      <input
        id="option3"
        name="options"
        type="radio"
      />
       Radio
    </label>
  </div>
  <div
    className="Component-btnContainer-0-1-315 Component-reboot-0-1-309 Component-btnGroup-0-1-305 Component-btnGroupToggle-0-1-306"
  >
    <label
      className="Component-btnActivethemeColor-0-1-316 Component-btn-0-1-304 Component-themeColor-0-1-310 Component-active-0-1-311"
    >
      <input
        id="option1"
        name="options"
        type="radio"
      />
       checked
    </label>
    <label
      className="Component-btnThemeColor-0-1-317 Component-btn-0-1-304 Component-themeColor-0-1-310"
    >
      <input
        id="option2"
        name="options"
        type="radio"
      />
       Radio
    </label>
    <label
      className="Component-btnThemeColor-0-1-317 Component-btn-0-1-304 Component-themeColor-0-1-310"
    >
      <input
        id="option3"
        name="options"
        type="radio"
      />
       Radio
    </label>
  </div>
  <div
    className="Component-btnContainer-0-1-329 Component-reboot-0-1-323 Component-btnGroup-0-1-319 Component-btnGroupToggle-0-1-320"
  >
    <label
      className="Component-btnActivethemeColor-0-1-330 Component-btn-0-1-318 Component-themeColor-0-1-324 Component-active-0-1-325"
    >
      <input
        id="option1"
        name="options"
        type="radio"
      />
       checked
    </label>
    <label
      className="Component-btnThemeColor-0-1-331 Component-btn-0-1-318 Component-themeColor-0-1-324"
    >
      <input
        id="option2"
        name="options"
        type="radio"
      />
       Radio
    </label>
    <label
      className="Component-btnThemeColor-0-1-331 Component-btn-0-1-318 Component-themeColor-0-1-324"
    >
      <input
        id="option3"
        name="options"
        type="radio"
      />
       Radio
    </label>
  </div>
</div>
`;

exports[`Storyshots Button sizes 1`] = `
<div>
  <button
    className="Component-btnPrimaryLarge-0-1-345 Component-btnMargin-0-1-344 Component-reboot-0-1-336 Component-btn-0-1-332 Component-btnLg-0-1-334 Component-primaryColor-0-1-337"
    type="button"
  >
    Primary Large
  </button>
  <button
    className="Component-btnSecondaryLarge-0-1-346 Component-btnMargin-0-1-344 Component-reboot-0-1-336 Component-btn-0-1-332 Component-btnLg-0-1-334 Component-secondaryColor-0-1-338"
    type="button"
  >
    Secondary Large
  </button>
  <button
    className="Component-btnPrimarySmall-0-1-347 Component-btnMargin-0-1-344 Component-reboot-0-1-336 Component-btn-0-1-332 Component-btnSm-0-1-335 Component-primaryColor-0-1-337"
    type="button"
  >
    Primary Small
  </button>
  <button
    className="Component-btnSecondarySmall-0-1-348 Component-btnMargin-0-1-344 Component-reboot-0-1-336 Component-btn-0-1-332 Component-btnSm-0-1-335 Component-secondaryColor-0-1-338"
    type="button"
  >
    Secondary Small
  </button>
  <button
    className="Component-btnPrimaryBlock-0-1-349 Component-btnMargin-0-1-344 Component-reboot-0-1-336 Component-btn-0-1-332 Component-btnBlock-0-1-333 Component-primaryColor-0-1-337"
    type="button"
  >
    Primary Block
  </button>
  <button
    className="Component-btnSecondaryBlock-0-1-350 Component-btnMargin-0-1-344 Component-reboot-0-1-336 Component-btn-0-1-332 Component-btnBlock-0-1-333 Component-secondaryColor-0-1-338"
    type="button"
  >
    Secondar Block
  </button>
</div>
`;

exports[`Storyshots Button states 1`] = `
<div>
  <button
    className="Component-btnPrimaryLarge-0-1-363 Component-btnMargin-0-1-362 Component-btn-0-1-351 Component-btnLg-0-1-353 Component-primaryColor-0-1-355"
    disabled={true}
    type="button"
  >
    Primary Large
  </button>
  <button
    className="Component-btnSecondaryLarge-0-1-364 Component-btnMargin-0-1-362 Component-btn-0-1-351 Component-btnLg-0-1-353 Component-secondaryColor-0-1-356"
    disabled={true}
    type="button"
  >
    Secondary Large
  </button>
  <a
    className="Component-btnPrimaryLargeDisabled-0-1-365 Component-btnMargin-0-1-362 Component-btn-0-1-351 Component-btnLg-0-1-353 Component-primaryColor-0-1-355 Component-disabled-0-1-358 Component-btnLink-0-1-354"
    href="#"
  >
    Primary link
  </a>
  <a
    className="Component-btnSecondaryLargeDisabled-0-1-366 Component-btnMargin-0-1-362 Component-btn-0-1-351 Component-btnLg-0-1-353 Component-secondaryColor-0-1-356 Component-disabled-0-1-358 Component-btnLink-0-1-354"
    href="#"
  >
    Link
  </a>
</div>
`;

exports[`Storyshots Button toolbar 1`] = `
<div
  className="Component-btnToolbar-0-1-367"
>
  <div
    className="Component-btnGroup-0-1-369"
  >
    <button
      className="Component-btnPrimary-0-1-380 Component-btn-0-1-368 Component-primaryColor-0-1-370"
      type="button"
    >
      1
    </button>
    <button
      className="Component-btnPrimary-0-1-380 Component-btn-0-1-368 Component-primaryColor-0-1-370"
      type="button"
    >
      2
    </button>
    <button
      className="Component-btnPrimary-0-1-380 Component-btn-0-1-368 Component-primaryColor-0-1-370"
      type="button"
    >
      3
    </button>
    <button
      className="Component-btnPrimary-0-1-380 Component-btn-0-1-368 Component-primaryColor-0-1-370"
      type="button"
    >
      4
    </button>
  </div>
  <div
    className="Component-btnGroup-0-1-369"
  >
    <button
      className="Component-btnSecondary-0-1-381 Component-btn-0-1-368 Component-secondaryColor-0-1-371"
      type="button"
    >
      5
    </button>
    <button
      className="Component-btnSecondary-0-1-381 Component-btn-0-1-368 Component-secondaryColor-0-1-371"
      type="button"
    >
      6
    </button>
    <button
      className="Component-btnSecondary-0-1-381 Component-btn-0-1-368 Component-secondaryColor-0-1-371"
      type="button"
    >
      7
    </button>
  </div>
  <div
    className="Component-btnGroup-0-1-369"
  >
    <button
      className="Component-dangerColor-0-1-372"
      type="button"
    >
      8
    </button>
  </div>
</div>
`;

exports[`Storyshots Card card 1`] = `
<div
  className="Component-card-0-1-394"
>
  <img
    className="Component-cardImgTop-0-1-389"
    src="img/286_180.svg"
  />
  <div
    className="Component-cardBody-0-1-390"
  >
    <h5
      className="Component-cardTitle-0-1-391"
    >
      Card title
    </h5>
    <p
      className="Component-cardText-0-1-392"
    >
      Some quick example text to build on the card title and make up the bulk of the card's content.
    </p>
    <a
      className="Component-btnPrimary-0-1-393"
      href="#"
    >
      Go somewhere
    </a>
  </div>
</div>
`;
